--- a/pages/alliances.html
+++ b/pages/alliances.html
@@ -2,13 +2,14 @@
 layout: default
 title: Alliances
 permalink: /alliances/
-header_title: Let's partner!
-header_css_class: page-hdr-1
 ---
 
-<div class="alliances">
+{% include page_header.html
+  header_title = 'Let&apos;s partner!'
+  header_css_class = 'page-hdr-1'
+%}
 
-  {% include page_header.html %}
+<div class="alliances">
 
   <div class="container">
 
