--- a/pages/hire_us.html
+++ b/pages/hire_us.html
@@ -2,13 +2,14 @@
 layout: default
 title: Hire Us
 permalink: /hire-us/
-header_title: Let's deliver something great.
-header_css_class: page-hdr-1
 ---
 
-<div class="hire-us">
+{% include page_header.html
+  header_title = 'Let&apos;s deliver something great.'
+  header_css_class = 'page-hdr-1'
+%}
 
-  {% include page_header.html %}
+<div class="hire-us">
 
   <div class="container">
 
