--- a/pages/policies.html
+++ b/pages/policies.html
@@ -2,12 +2,13 @@
 layout: default
 title: Our Policies
 permalink: /policies/
-header_css_class: page-hdr-1
 ---
 
-<div class="our-policies">
+{% include page_header.html
+  header_css_class = 'page-hdr-1'
+%}
 
-  {% include page_header.html %}
+<div class="our-policies">
 
   <div class="container">
 
