--- a/pages/blog.html
+++ b/pages/blog.html
@@ -2,13 +2,14 @@
 layout: default
 title: Our Blog
 permalink: /blog/
-header_content_class: page-hdr-content-2
-header_content: Our shared thoughts on technology, design, procurement, business, culture, and more.
 ---
 
-<div class="our-blog">
-  {% include page_header.html %}
+{% include page_header.html
+  header_content_class = 'page-hdr-content-2'
+  header_content = 'Our shared thoughts on technology, design, procurement, business, culture, and more.'
+%}
 
+<div class="our-blog">
   {% assign blog_posts = (site.blog_posts | sort: 'date_published') | reverse %}
 
   {% include card_list.html
