--- a/pages/guides.html
+++ b/pages/guides.html
@@ -2,15 +2,19 @@
 layout: default
 title: Guides
 permalink: /guides/
-header_content_class: page-hdr-content-2
-header_content: >
-  Improving how government works in a digital world through our shared,
-  open-source repository of how-to's and best practices.
 ---
 
-<div class="our-guides">
-  {% include page_header.html %}
+{% capture header_content %}
+  Improving how government works in a digital world through our shared,
+  open-source repository of how-to's and best practices.
+{% endcapture %}
 
+{% include page_header.html
+  header_content_class = 'page-hdr-content-2'
+  header_content = header_content
+%}
+
+<div class="our-guides">
   {% assign guides = site.guides | sort: 'order' %}
 
   {% include card_list.html
