--- a/pages/about.html
+++ b/pages/about.html
@@ -136,9 +136,8 @@ permalink: /about/
       <div class="row">
         <div class="narrative">
           <p>
-            If you have a question for us, or would just like to get in touch, drop us a message on
-            <a href="{{site.slack_invite_url}}" target="_blank">Slack</a> or at
-            <a href="mailto:hello@skylight.digital">hello@skylight.digital</a>.
+            If you have a question for us, or would just like to get in touch, drop us a message
+            at <a href="mailto:hello@skylight.digital">hello@skylight.digital</a>.
             If you’d like to inquire about hiring us for a job, <a href="/hire-us/">fill out this short form</a>.
             If you're interested in joining our team, <a href="/join/">send us your information</a>.
             If you'd like to explore forming a partnership to pursue government opportunities,
