--- a/pages/services.html
+++ b/pages/services.html
@@ -59,7 +59,7 @@ permalink: /services/
           <p>
             Your digital challenges are neither siloed nor static. Our teams are smartly
             tailored to meet your holistic and dynamic needs, and to impart you with
-            the competencies necessary to succeed in the digital era without us.
+            the competencies necessary to succeed in the digital era.
           </p>
         </div>
       </div>
