resolve access lint issues

--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@ permalink: /404.html
 {% endcapture %}
 
 {% include page_header.html
-  header_title = 'Ah snap!'
+  header_title = 'Oh snap!'
   header_content_class = 'page-hdr-content-2'
   header_content = header_content
 %}
