--- a/pages/join.html
+++ b/pages/join.html
@@ -59,7 +59,7 @@ permalink: /join/
             <legend>Experience</legend>
 
             <div class="form-group">
-              <label class="btn-file required" role="button">
+              <label class="btn-file required" role="button" for="resume-input-file">
                 <input id="resume-input-file" class="sr-only" type="file" title="Upload your resume" aria-describedby="resume-help" required>
                 <span>Upload Resume</span>
               </label>
