--- a/pages/alliances.html
+++ b/pages/alliances.html
@@ -52,7 +52,7 @@ permalink: /alliances/
           </div>
 
           <div class="form-group">
-            <button type="submit" role="button">Submit</button>
+            <button type="submit">Submit</button>
           </div>
         </form>
       </div>
