--- a/pages/hire_us.html
+++ b/pages/hire_us.html
@@ -53,7 +53,7 @@ permalink: /hire-us/
           </div>
 
           <div class="form-group">
-            <button type="submit" role="button">Submit</button>
+            <button type="submit">Submit</button>
           </div>
         </form>
       </div>
