remove value from option attributes

--- a/pages/join.html
+++ b/pages/join.html
@@ -73,7 +73,7 @@ permalink: /join/
             <div class="form-group">
               <label class="required" for="experience-select">What is your primary field of expertise?</label>
               <select id="experience-select" class="form-control" required>
-                <option disabled="" selected="">-select-</option>
+                <option disabled selected>-select-</option>
                 <option>Software engineering</option>
                 <option>Frontend web development</option>
                 <option>Legacy software reengineering</option>
@@ -171,7 +171,7 @@ permalink: /join/
             <div class="form-group">
               <label for="authorization-select" aria-describedby="authorization-help">Are you authorized to work in the U.S.?</label>
               <select id="authorization-select" class="form-control">
-                <option disabled="" selected="">-select-</option>
+                <option disabled selected>-select-</option>
                 <option>Yes, I’m a U.S. citizen.</option>
                 <option>Yes, I’m authorized to work in the U.S., though I’m not a citizen.</option>
                 <option>No.</option>
@@ -185,7 +185,7 @@ permalink: /join/
             <div class="form-group">
               <label for="hear-select">How did you hear about Skylight?</label>
               <select id="hear-select" class="form-control">
-                <option disabled="" selected="">-select-</option>
+                <option disabled selected>-select-</option>
                 <option>A current/former Skylight team member</option>
                 <option>An article, video, or blog post</option>
                 <option>Twitter</option>
