lots of css/html cleanup

--- a/index.html
+++ b/index.html
@@ -5,22 +5,18 @@ title: Home
 
 <div class="landing-page">
 
-  <section class="lp-headline">
-    <div class="lp-headline-content">
-      <h1 class="hidden-md-up">
-        We make government work in a digital world
-      </h1>
+  <section class="landing-jumbotron">
+    <div class="landing-jumbotron-content">
+      <h1 class="hidden-md-up">We make government work in a digital world</h1>
 
-      <h1 class="hidden-sm-down">
-        We make government <br> work in a digital world
-      </h1>
+      <h1 class="hidden-sm-down">We make government <br> work in a digital world</h1>
 
-      <p class="lead hidden-md-up">
+      <p class="hidden-md-up">
         Skylight is a <em>HUBZone</em> digital consultancy, using design, technology,
         and procurement to enable government success in the digital age.
       </p>
 
-      <p class="lead hidden-sm-down">
+      <p class="hidden-sm-down">
         Skylight is a <em>HUBZone</em> digital consultancy, using design, technology,
         <br> and procurement to enable government success in the digital age.
       </p>
@@ -32,21 +28,18 @@ title: Home
     </div>
   </section>
 
-  <div class="lp-body">
+  <div class="landing-body">
 
-    <section class="lp-body-section">
-      <div class="lp-body-hdr-wrapper">
-        <div class="lp-body-hdr">
-          <h2>
-            Solving important problems
-          </h2>
-
-          <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
+    <section class="landing-section">
+      <div class="landing-header-row">
+        <div class="landing-header-col">
+          <h2>Solving important problems</h2>
+          <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="">
         </div>
       </div>
 
-      <div class="lp-body-content-wrapper">
-        <div class="lp-body-content">
+      <div class="landing-content-row">
+        <div class="landing-content-col">
           <p>
             Every day millions of people &mdash; from veterans to immigrants &mdash;
             depend on government services to fulfill their needs. But too often
@@ -68,28 +61,23 @@ title: Home
         </div>
       </div>
 
-      <div class="lp-body-cta-wrapper">
-        <div class="lp-body-cta">
-          <a class="lp-body-cta-btn" href="/about/" role="button">
-            About us
-          </a>
+      <div class="landing-cta-row">
+        <div class="landing-cta-col">
+          <a class="landing-cta" href="/about/" role="button">About us</a>
         </div>
       </div>
     </section>
 
-    <section class="lp-body-section">
-      <div class="lp-body-hdr-wrapper">
-        <div class="lp-body-hdr">
-          <h2>
-            Services designed for your success
-          </h2>
-
-          <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
+    <section class="landing-section">
+      <div class="landing-header-row">
+        <div class="landing-header-col">
+          <h2>Services designed for your success</h2>
+          <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="">
         </div>
       </div>
 
-      <div class="lp-body-content-wrapper">
-        <div class="lp-body-content">
+      <div class="landing-content-row">
+        <div class="landing-content-col">
           <p>
             To succeed in today’s public-service environment, you need to think
             and be digital. But getting there often requires fundamental practice,
@@ -110,9 +98,9 @@ title: Home
             These services are designed not only to deliver results, but to also
             transfer our knowledge of modern principles and practices to you.
             To facilitate this learning process, we employ a unique practice called
-            <span class="font-italic">embedded instructional design</span>. Even further, <a href="/guilds/">our guilds</a> (communities of practice)
-            make all of our delivery assets such as methodologies completely free, open,
-            and accessible to you.
+            <span class="font-italic">embedded instructional design</span>. Even further,
+            <a href="/guilds/">our guilds</a> (communities of practice) make all of our
+            delivery assets such as methodologies completely free, open, and accessible to you.
           </p>
 
           <p>
@@ -121,28 +109,23 @@ title: Home
         </div>
       </div>
 
-      <div class="lp-body-cta-wrapper">
-        <div class="lp-body-cta">
-          <a class="lp-body-cta-btn" href="/services/" role="button">
-            Our services
-          </a>
+      <div class="landing-cta-row">
+        <div class="landing-cta-col">
+          <a class="landing-cta" href="/services/" role="button">Our services</a>
         </div>
       </div>
     </section>
 
-    <section class="lp-body-section">
-      <div class="lp-body-hdr-wrapper">
-        <div class="lp-body-hdr">
-          <h2>
-            Experience that speaks volumes
-          </h2>
-
-          <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
+    <section class="landing-section">
+      <div class="landing-header-row">
+        <div class="landing-header-col">
+          <h2>Experience that speaks volumes</h2>
+          <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="">
         </div>
       </div>
 
-      <div class="lp-body-content-wrapper">
-        <div class="lp-body-content">
+      <div class="landing-content-row">
+        <div class="landing-content-col">
           <p>
             As a company, we may be new, but we bring a wealth of individual
             and team experience. We co-founded and scaled 18F, built and sold
@@ -156,32 +139,24 @@ title: Home
         </div>
       </div>
 
-      <div class="lp-body-cta-wrapper">
-        <div class="lp-body-cta">
-          <a class="lp-body-cta-btn" href="/work/" role="button">
-            Our work
-          </a>
+      <div class="landing-cta-row">
+        <div class="landing-cta-col">
+          <a class="landing-cta" href="/work/" role="button">Our work</a>
         </div>
       </div>
     </section>
 
-    <section class="lp-body-section">
-      <div class="lp-body-hdr-wrapper">
-        <div class="lp-body-hdr">
-          <h2 class="hidden-md-up">
-            Strengthening your culture through ours
-          </h2>
-
-          <h2 class="hidden-sm-down">
-            Strengthening your culture <br> through ours
-          </h2>
-
-          <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="" />
+    <section class="landing-section">
+      <div class="landing-header-row">
+        <div class="landing-header-col">
+          <h2 class="hidden-md-up">Strengthening your culture through ours</h2>
+          <h2 class="hidden-sm-down">Strengthening your culture <br> through ours</h2>
+          <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="">
         </div>
       </div>
 
-      <div class="lp-body-content-wrapper">
-        <div class="lp-body-content">
+      <div class="landing-content-row">
+        <div class="landing-content-col">
           <p>
             Our culture is designed to empower you to succeed in a digital world.
           </p>
@@ -199,11 +174,9 @@ title: Home
         </div>
       </div>
 
-      <div class="lp-body-cta-wrapper">
-        <div class="lp-body-cta">
-          <a class="lp-body-cta-btn" href="/culture/" role="button">
-            Our culture
-          </a>
+      <div class="landing-cta-row">
+        <div class="landing-cta-col">
+          <a class="landing-cta" href="/culture/" role="button">Our culture</a>
         </div>
       </div>
     </section>
