--- a/pages/alliances.html
+++ b/pages/alliances.html
@@ -24,7 +24,7 @@ permalink: /alliances/
     </div>
 
     <div class="row">
-      <div class="alliances-contact">
+      <div class="alliances-contact-col">
         <form>
           <div class="form-group">
             <label class="required" for="name-input">Name</label>
