--- a/pages/join.html
+++ b/pages/join.html
@@ -8,7 +8,7 @@ permalink: /join/
 
   <div class="row">
 
-    <aside class="subnav">
+    <aside class="subnav-col">
       <nav>
         <ul role="presentation">
           <li class="current"><a href="/join/#application" aria-current="location">Apply now</a></li>
@@ -22,7 +22,7 @@ permalink: /join/
       </nav>
     </aside>
 
-    <section class="join-content">
+    <section class="join-content-col">
       <div id="application">
         <h2>Apply now</h2>
 
