--- a/pages/policies.html
+++ b/pages/policies.html
@@ -23,7 +23,7 @@ permalink: /policies/
     </div>
 
     <div class="row">
-      <div class="policy-list">
+      <div class="policy-list-col">
         <ul>
           <li><a href="/policies/privacy/">Privacy policy</a></li>
           <li><a href="/policies/intellectual-property/">Intellectual property policy</a></li>
