--- a/pages/hire_us.html
+++ b/pages/hire_us.html
@@ -25,7 +25,7 @@ permalink: /hire-us/
     </div>
 
     <div class="row">
-      <div class="hire-us-contact">
+      <div class="hire-us-contact-col">
         <form>
           <div class="form-group">
             <label class="required" for="name-input">Name</label>
