misc css/html cleanup

--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@ permalink: /404.html
 
 {% include page_header.html
   header_title = 'Oh snap!'
-  header_content_class = 'page-hdr-content-2'
+  header_content_class = 'page-header-content-2'
   header_content = header_content
 %}
 
