--- a/pages/alliances.html
+++ b/pages/alliances.html
@@ -6,58 +6,54 @@ permalink: /alliances/
 
 {% include page_header.html
   header_title = 'Let&apos;s partner!'
-  header_css_class = 'page-hdr-1'
+  header_css_class = 'page-header-1'
 %}
 
 <div class="alliances">
 
-  <div class="container">
-
-    <div class="row">
-      <div class="text-lead">
-        <p>
-          We’re embarking on a mission to create a world-class ecosystem of alliances &mdash;
-          from large companies to independent freelancers &mdash; who are passionate about making
-          government work in a digital world.
-        </p>
-      </div>
+  <div class="alliances-row">
+    <div class="text-lead-col">
+      <p>
+        We’re embarking on a mission to create a world-class ecosystem of alliances &mdash;
+        from large companies to independent freelancers &mdash; who are passionate about making
+        government work in a digital world.
+      </p>
     </div>
+  </div>
 
-    <div class="row">
-      <div class="alliances-contact-col">
-        <form>
-          <div class="form-group">
-            <label class="required" for="name-input">Name</label>
-            <input id="name-input" class="form-control" type="text" placeholder="Julie Styles" name="name" autocomplete="name" required>
-          </div>
+  <div class="alliances-row">
+    <div class="alliances-contact-col">
+      <form>
+        <div class="form-group">
+          <label class="required" for="name-input">Name</label>
+          <input id="name-input" class="form-control" type="text" placeholder="Julie Styles" name="name" autocomplete="name" required>
+        </div>
 
-          <div class="form-group">
-            <label class="required" for="org-input">Organization</label>
-            <input id="org-input" class="form-control" type="text" placeholder="Acme Technologies" name="org" autocomplete="org" required>
-          </div>
+        <div class="form-group">
+          <label class="required" for="org-input">Organization</label>
+          <input id="org-input" class="form-control" type="text" placeholder="Acme Technologies" name="org" autocomplete="org" required>
+        </div>
 
-          <div class="form-group">
-            <label class="required" for="email-input">Email</label>
-            <input id="email-input" class="form-control" type="email" placeholder="julie@acmetech.co" name="email" autocomplete="email" required>
-          </div>
+        <div class="form-group">
+          <label class="required" for="email-input">Email</label>
+          <input id="email-input" class="form-control" type="email" placeholder="julie@acmetech.co" name="email" autocomplete="email" required>
+        </div>
 
-          <div class="form-group">
-            <label for="tel-input">Telephone</label>
-            <input id="tel-input" class="form-control" type="tel" placeholder="555-555-5555" name="phone" autocomplete="tel">
-          </div>
+        <div class="form-group">
+          <label for="tel-input">Telephone</label>
+          <input id="tel-input" class="form-control" type="tel" placeholder="555-555-5555" name="phone" autocomplete="tel">
+        </div>
 
-          <div class="form-group">
-            <label class="required" for="help-input">How can we work together?</label>
-            <textarea id="help-input" class="form-control" rows="3" placeholder="Let's team on an exciting project opportunity..." required></textarea>
-          </div>
+        <div class="form-group">
+          <label class="required" for="help-input">How can we work together?</label>
+          <textarea id="help-input" class="form-control" rows="3" placeholder="Let's team on an exciting project opportunity..." required></textarea>
+        </div>
 
-          <div class="form-group">
-            <button type="submit">Submit</button>
-          </div>
-        </form>
-      </div>
+        <div class="form-group">
+          <button type="submit">Submit</button>
+        </div>
+      </form>
     </div>
-
   </div>
 
 </div>
