--- a/pages/guides.html
+++ b/pages/guides.html
@@ -10,7 +10,7 @@ permalink: /guides/
 {% endcapture %}
 
 {% include page_header.html
-  header_content_class = 'page-hdr-content-2'
+  header_content_class = 'page-header-content-2'
   header_content = header_content
 %}
 
