--- a/pages/blog.html
+++ b/pages/blog.html
@@ -5,7 +5,7 @@ permalink: /blog/
 ---
 
 {% include page_header.html
-  header_content_class = 'page-hdr-content-2'
+  header_content_class = 'page-header-content-2'
   header_content = 'Our shared thoughts on technology, design, procurement, business, culture, and more.'
 %}
 
