--- a/pages/policies.html
+++ b/pages/policies.html
@@ -5,36 +5,32 @@ permalink: /policies/
 ---
 
 {% include page_header.html
-  header_css_class = 'page-hdr-1'
+  header_css_class = 'page-header-1'
 %}
 
 <div class="our-policies">
 
-  <div class="container">
-
-    <div class="row">
-      <div class="text-lead">
-        <p>
-          Our policies govern how we interact with you and our fellow colleagues.
-          We've written them to be as plain language as possible so humans
-          (not just lawyers) can actually understand them.
-        </p>
-      </div>
+  <div class="policies-row">
+    <div class="text-lead-col">
+      <p>
+        Our policies govern how we interact with you and our fellow colleagues.
+        We've written them to be as plain polanguage as possible so humans
+        (not just lawyers) can actually understand them.
+      </p>
     </div>
+  </div>
 
-    <div class="row">
-      <div class="policy-list-col">
-        <ul>
-          <li><a href="/policies/privacy/">Privacy policy</a></li>
-          <li><a href="/policies/intellectual-property/">Intellectual property policy</a></li>
-          <li><a href="/policies/linking/">Linking policy</a></li>
-          <li><a href="/policies/open-source/">Open source policy</a></li>
-          <li><a href="/policies/vulnerability-disclosure/">Vulnerability disclosure policy</a></li>
-          <li><a href="/policies/code-of-conduct/">Code of conduct policy</a></li>
-        </ul>
-      </div>
+  <div class="policies-row">
+    <div class="policy-list-col">
+      <ul>
+        <li><a href="/policies/privacy/">Privacy policy</a></li>
+        <li><a href="/policies/intellectual-property/">Intellectual property policy</a></li>
+        <li><a href="/policies/linking/">Linking policy</a></li>
+        <li><a href="/policies/open-source/">Open source policy</a></li>
+        <li><a href="/policies/vulnerability-disclosure/">Vulnerability disclosure policy</a></li>
+        <li><a href="/policies/code-of-conduct/">Code of conduct policy</a></li>
+      </ul>
     </div>
-
   </div>
 
 </div>
