--- a/pages/work.html
+++ b/pages/work.html
@@ -11,7 +11,7 @@ permalink: /work/
 {% endcapture %}
 
 {% include page_header.html
-  header_content_class = 'page-hdr-content-2'
+  header_content_class = 'page-header-content-2'
   header_content = header_content
 %}
 
