add hubzone logo, modify footer links, add hover effect to service icon link

--- a/pages/work.html
+++ b/pages/work.html
@@ -5,7 +5,7 @@ permalink: /work/
 ---
 
 {% capture header_content %}
-  We’re a newly-found HUBZone digital consultancy. Although our company is new,
+  We’re a new-found HUBZone digital consultancy. Although our company is new,
   our people are not. Explore a sampling of the experience that we bring to your
   biggest digital challenges and opportunities.
 {% endcapture %}
