remove all guides related code (for now)

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@ title: Home
             transfer our knowledge of modern principles and practices to you.
             To facilitate this learning process, we employ a unique practice called
             <span class="font-italic">embedded instructional design</span>. Even further,
-            <a href="/guilds/">our guilds</a> (communities of practice) make all of our
-            delivery assets such as methodologies completely free, open, and accessible to you.
+            we make all of our delivery assets such as methodologies completely free, open,
+            and accessible to you.
           </p>
 
           <p>
