--- a/pages/about.html
+++ b/pages/about.html
@@ -101,22 +101,12 @@ permalink: /about/
                     <p class="employee-text">{{emp.bio}}</p>
                   </div>
                   <div class="employee-footer">
-                      <span class="employee-socials">
-                        {% for social in emp.socials %}
-                          <a href="{{social.link}}" target="_blank" data-toggle="tooltip" data-placement="top" data-animation="false" title="{{social.link_description}}">
-                            <i class="fa fa-{{social.fa_icon_name}}" aria-hidden="true" title="{{social.name}}"></i>
-                            <span class="sr-only">{{social.link_description}}</span>
-                          </a>
-                        {% endfor %}
-                      </span>
-                      <span class="employee-contributions">
-                        {% for contr in emp.contributions %}
-                          <a href="{{contr.link}}" data-toggle="tooltip" data-placement="top" data-animation="false" title="{{contr.link_description}}">
-                            <i class="fa fa-{{contr.fa_icon_name}}" aria-hidden="true" title="{{contr.name}}"></i>
-                            <span class="sr-only">{{contr.link_description}}</span>
-                          </a>
-                        {% endfor %}
-                      </span>
+                      {% for social in emp.socials %}
+                        <a href="{{social.link}}" target="_blank" data-toggle="tooltip" data-placement="top" data-animation="false" title="{{social.link_description}}">
+                          <i class="fa fa-{{social.fa_icon_name}}" aria-hidden="true" title="{{social.name}}"></i>
+                          <span class="sr-only">{{social.link_description}}</span>
+                        </a>
+                      {% endfor %}
                   </div>
                 </div>
               </div>
@@ -157,8 +147,8 @@ permalink: /about/
 
           <p>
             Feel free to reach out directly to one of our leaders &mdash;
-            <a href="mailto:rob@skylight.digital">Rob Read</a>
-            or <a href="mailto:sean@skylight.digital">Sean Johnson</a>.
+            <a href="mailto:chris@skylight.digital">Chris Cairns</a>
+            or <a href="mailto:robert@skylight.digital">Robert Read</a>.
           </p>
 
           <p>
