--- a/pages/about.html
+++ b/pages/about.html
@@ -102,7 +102,12 @@ permalink: /about/
                   </div>
                   <div class="employee-footer">
                       {% for social in emp.socials %}
-                        <a href="{{social.link}}" target="_blank" data-toggle="tooltip" data-placement="top" data-animation="false" title="{{social.link_description}}">
+                        {% if social.name == 'Blog Posts' or social.name == 'Projects' %}
+                          {% assign target = '_self' %}
+                        {% else %}
+                          {% assign target = '_blank' %}
+                        {% endif %}
+                        <a href="{{social.link}}" target={{target}} data-toggle="tooltip" data-placement="top" data-animation="false" title="{{social.link_description}}">
                           <i class="fa fa-{{social.fa_icon_name}}" aria-hidden="true" title="{{social.name}}"></i>
                           <span class="sr-only">{{social.link_description}}</span>
                         </a>
