--- a/pages/about.html
+++ b/pages/about.html
@@ -94,7 +94,7 @@ permalink: /about/
             {% if emp.active %}
               <div id="{{emp.name}}" class="employee-col">
                 <div class="employee-card">
-                  <img class="employee-img" src="{{emp.image}}" alt="{{emp.image_description}}">
+                  <div role="img" class="employee-img" style="background-image: url({{emp.image}});" title="{{emp.image_description}}"></div>
                   <div class="employee-block">
                     <h3 class="employee-title">{{emp.full_name}}</h3>
                     <h4 class="employee-subtitle">{{emp.position}}</h4>
